# vinagent

./: .env.example  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  agent.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.ipynb  test.md
.github/workflows/: black.yaml  ci_docs.yaml
agentcore/agent/: agent.py
agentools/agent/: agent.py
agentools/examples/: todaytrend.md
agentools/register/: initialize.py  tool.py
agentools/tools/: computer_tools.py  deepsearch.py  websearch_tools.py  yfinance_tools.py
cookbook/: bash_agent_guide.ipynb  compare_agentools_with_langgraph.ipynb  compare_vinagent_with_langgraph.ipynb  custom_deepsearch.ipynb
cookbook/agentskill/: agentskill_tutorial.ipynb  office_staff_agent_tutorial.ipynb
cookbook/dynamic_multi_agents/: Dynamic_Multi_Agent_Tutorial.ipynb
cookbook/financial_usercases/: 1.Visualize_and_Analyze_Stock_Trending.ipynb  2.Trending_New.ipynb
cookbook/multi_agent_in_finance/: 00_multi_agent_finance_roadmap.ipynb  01_sequential_financial_analyst_crew.ipynb  02_active_trading_advisory.ipynb  03_quantitative_alpha_generation.ipynb  04_institutional_portfolio_management.ipynb  05_autonomous_financial_director.ipynb  vnstock_tools.py
docs/: README.md  convert_jpynb_to_markdown.sh  mkdocs.yml  settings.json
docs/docs/: index.md
project/paper_research/: agent.py
templates/: memory.json  tools.json
vinagent/: __init__.py
vinagent/agent/: agent.py
vinagent/executor/: ainvoke.py  astream.py  base.py  graph_executor.py  guardrail.py  invoke.py  stream.py
(+107 files in other folders)
