[tool.poetry]
name = "agentools"
version = "0.1.0"
description = ""
authors = ["phamdinhkhanh <phamdinhkhanh.tkt53.neu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | .*\.ipynb
/)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
